Pressing pin comment button no longer jumps to top of page

--- a/ucri/static/styles.css
+++ b/ucri/static/styles.css
@@ -267,6 +267,9 @@ name			{ color: #377BA8; font-family: 'Georgia', serif; margin: 0; font-size: 3e
     padding: 5px 9px;
     text-align: center;
     text-shadow: 0 1px rgba(255, 255, 255, 0.9);
+    text-decoration: none;
+    font-size: x-small;
+    line-height: 10px;
 
     -webkit-transition: all 0.2s ease-in-out 0s;
     -moz-transition: all 0.2s ease-in-out 0s;
